--- a/.github/workflows/connect_ec2_testing.yml
+++ b/.github/workflows/connect_ec2_testing.yml
@@ -14,7 +14,7 @@ jobs:
       uses: actions/checkout@v2
 
     - name: Set up SSH
-      uses: webfactory/ssh-agent@v0.5.5
+      uses: appleboy/ssh-action@master
       with:
         private-key: ${{ secrets.EC2_SSH_PRIVATE_KEY_TESTING }}
 
