--- a/.github/workflows/connect_ec2_staging.yml
+++ b/.github/workflows/connect_ec2_staging.yml
@@ -6,19 +6,19 @@ on:
       - main
 
 jobs:
-  run-command:
+  deploy:
+    name: Deploy to EC2 STAGING
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout Repository
-      uses: actions/checkout@v2
-
-    - name: Set up SSH
-      uses: appleboy/ssh-action@master
-      with:
-        private-key: ${{ secrets.EC2_SSH_PRIVATE_KEY_STAGING }}
-
-    - name: Run Command on EC2
-      run: |
-        EC2_IP=$(ssh -o StrictHostKeyChecking=no ubuntu@57.180.56.137 "bash -s" < ~/trigger_service_up.sh)
-        echo "You Can Access the Site at : http://57.180.56.137"
+      - uses: actions/checkout@v2
+      - name: Build & Deploy
+        env:
+          PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY_STAGING }}
+          HOSTNAME: ${{ secrets.SSH_HOST_STAGING }}
+          USER_NAME: ${{ secrets.USER_NAME }}
+        run: |
+          echo "$PRIVATE_KEY" > private_key && chmod 600 private_key
+          ssh -o StrictHostKeyChecking=no -i private_key ${USER_NAME}@${HOSTNAME} '
+          bash trigger_service_up.sh
+          echo "THE SERVER IS UP AT http://${SSH_HOST_STAGING}"
