--- a/.github/workflows/connect_ec2_staging.yml
+++ b/.github/workflows/connect_ec2_staging.yml
@@ -21,4 +21,4 @@ jobs:
           echo "$PRIVATE_KEY" > private_key && chmod 600 private_key
           ssh -o StrictHostKeyChecking=no -i private_key ${USER_NAME}@${HOSTNAME} '
           bash trigger_service_up.sh
-          echo "THE SERVER IS UP AT http://${SSH_HOST_STAGING}"
+          echo "THE SERVER IS UP AT http://${HOSTNAME}"
