--- a/.github/workflows/connect_ec2_staging.yml
+++ b/.github/workflows/connect_ec2_staging.yml
@@ -11,14 +11,17 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v2
+      - name: Checkout code
+        uses: actions/checkout@v2
+
       - name: Build & Deploy
         env:
           PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY_STAGING }}
           HOSTNAME: ${{ secrets.SSH_HOST_STAGING }}
           USER_NAME: ${{ secrets.USER_NAME }}
         run: |
-          echo "$PRIVATE_KEY" > private_key && chmod 600 private_key
+          echo "$PRIVATE_KEY" > private_key
+          chmod 600 private_key
           ssh -o StrictHostKeyChecking=no -i private_key ${USER_NAME}@${HOSTNAME} '
-          bash trigger_service_up.sh
-          echo "THE SERVER IS UP AT http://${HOSTNAME}"
+            bash trigger_service_up.sh
+            echo "THE SERVER IS UP AT http://${HOSTNAME}"'
