--- a/.github/workflows/connect_ec2_staging.yml
+++ b/.github/workflows/connect_ec2_staging.yml
@@ -20,4 +20,4 @@ jobs:
           HOSTNAME: ${{ secrets.SSH_HOST_STAGING }}
           USER_NAME: ${{ secrets.USER_NAME }}
         run: |
-          echo "${PRIVATE_KEY}"
+          cat "${PRIVATE_KEY}" 
