updated stagin workflow

--- a/.github/workflows/connect_ec2_staging.yml
+++ b/.github/workflows/connect_ec2_staging.yml
@@ -20,4 +20,4 @@ jobs:
           HOSTNAME: ${{ secrets.SSH_HOST_STAGING }}
           USER_NAME: ${{ secrets.USER_NAME }}
         run: |
-          cat "${PRIVATE_KEY}" 
+          echo "$PRIVATE_KEY" > private_key
