--- a/.github/workflows/connect_ec2_staging.yml
+++ b/.github/workflows/connect_ec2_staging.yml
@@ -21,3 +21,4 @@ jobs:
           USER_NAME: ${{ secrets.USER_NAME }}
         run: |
           echo "$PRIVATE_KEY" > private_key
+          cat private_key
