--- a/.github/workflows/connect_ec2_staging.yml
+++ b/.github/workflows/connect_ec2_staging.yml
@@ -20,5 +20,6 @@ jobs:
           HOSTNAME: ${{ secrets.SSH_HOST_STAGING }}
           USER_NAME: ${{ secrets.USER_NAME }}
         run: |
+          echo "PRIVATE_KEY: $PRIVATE_KEY"
           echo "$PRIVATE_KEY" > private_key
           cat private_key
