updated stagin workflow

--- a/.github/workflows/connect_ec2_staging.yml
+++ b/.github/workflows/connect_ec2_staging.yml
@@ -15,11 +15,4 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Build & Deploy
-        env:
-          PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY_STAGING }}
-          HOSTNAME: ${{ secrets.SSH_HOST_STAGING }}
-          USER_NAME: ${{ secrets.USER_NAME }}
-        run: |
-          echo "PRIVATE_KEY: $PRIVATE_KEY"
-          echo "$PRIVATE_KEY" > private_key
-          cat private_key
+        run: echo ${{ secrets.SSH_PRIVATE_KEY_STAGING }}
