--- a/.github/workflows/connect_ec2_staging.yml
+++ b/.github/workflows/connect_ec2_staging.yml
@@ -1,4 +1,4 @@
-name: EC2 Command Execution
+name: SSH Deploy
 
 on:
   push:
@@ -7,21 +7,24 @@ on:
 
 jobs:
   deploy:
-    name: Deploy to EC2 STAGING
+    name: STAGINGGG
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
+    - name: Checkout Repository
+      uses: actions/checkout@v2
 
-      - name: Build & Deploy
-        env:
-          PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY_STAGING }}
-          HOSTNAME: ${{ secrets.SSH_HOST_STAGING }}
-          USER_NAME: ${{ secrets.USER_NAME }}
-        run: |
-          echo "$PRIVATE_KEY" > private_key
-          chmod 600 private_key
-          ssh -o StrictHostKeyChecking=no -i private_key ${USER_NAME}@${HOSTNAME} '
-            bash trigger_service_up.sh
-            echo "THE SERVER IS UP AT http://${HOSTNAME}"'
+    - name: Set Up SSH
+      run: |
+        echo "${{ secrets.SSH_PRIVATE_KEY_STAGING }}" > private_key
+        cat private_key
+        chmod 600 private_key
+        ssh-keyscan -t ed25519 -H ${{ secrets.HOSTNAME }} >> ~/.ssh/known_hosts
+
+    - name: SSH into AWS Instance
+      run: |
+        ssh -o StrictHostKeyChecking=no -i private_key ${{ secrets.USER_NAME }}@${{ secrets.HOSTNAME }} '
+          bash trigger_service_up.sh
+          echo "THE SERVER IS UP AT http://${{ secrets.HOSTNAME }}"'
+      env:
+        PRIVATE_KEY: ${{ secrets.PRIVATE_KEY }}
