--- a/.github/workflows/connect_ec2_staging.yml
+++ b/.github/workflows/connect_ec2_staging.yml
@@ -21,7 +21,7 @@ jobs:
           USER_NAME: ${{ secrets.USER_NAME }}
         run: |
           echo "$PRIVATE_KEY" > private_key.pem
-          chmod 400 private_key
+          chmod 400 private_key.pem
           ssh -o StrictHostKeyChecking=no -i private_key.pem ${USER_NAME}@${HOSTNAME} '
             bash trigger_service_up.sh
             echo "THE SERVER IS UP AT http://${HOSTNAME}"'
