--- a/.github/workflows/connect_ec2_staging.yml
+++ b/.github/workflows/connect_ec2_staging.yml
@@ -24,5 +24,4 @@ jobs:
           chmod 400 private_key.pem
           ssh -o StrictHostKeyChecking=no -i private_key.pem ${USER_NAME}@${HOSTNAME} '
             bash trigger_service_up.sh
-            echo "DONE"
-            echo "THE SERVER IS UP AT http://${HOSTNAME}"'
+            echo "THE SERVER IS UP AT http://${HOSTNAME}"
