--- a/.github/workflows/connect_ec2_staging.yml
+++ b/.github/workflows/connect_ec2_staging.yml
@@ -20,9 +20,9 @@ jobs:
           HOSTNAME: ${{ secrets.SSH_HOST_TESTING }}
           USER_NAME: ${{ secrets.USER_NAME }}
         run: |
-          echo "${{ secrets.SSH_PRIVATE_KEY_STAGING }}" > private_key.pem
-          chmod 400 private_key.pem
-          ssh -i private_key.pem ${USER_NAME}@${HOSTNAME} '
+          echo "${PRIVATE_KEY}" > private_key
+          chmod 400 private_key
+          ssh -i private_key ${USER_NAME}@${HOSTNAME} '
           bash trigger_service_up.sh
           echo "DONE!"
           echo "THE SERVER IS UP AT http://${HOSTNAME}"'
