--- a/.github/workflows/connect_ec2_testing.yml
+++ b/.github/workflows/connect_ec2_testing.yml
@@ -14,6 +14,23 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
+      - name: Set up Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: '3.11'
+
+      - name: Install dependencies
+        run: |
+          pip install -r requirements.txt
+
+      - name: Run unit tests
+        run: |
+          pytest
+
+      - name: Perform code analysis/linting
+        run: |
+          flake8
+
       - name: Build & Deploy
         env:
           PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY_TESTING }}
@@ -25,3 +42,29 @@ jobs:
           ssh -o StrictHostKeyChecking=no -i private_key ${USER_NAME}@${HOSTNAME} '
             bash trigger_service_up.sh
             echo "THE SERVER IS UP AT http://${HOSTNAME}"'
+  notify:
+    runs-on: ubuntu-latest
+    needs: deploy
+
+    steps:
+      - name: Send email notification on failure
+        if: failure()
+        uses: dawidd6/action-send-mail@v3
+        with:
+          server_address: smtp.gmail.com
+          server_port: 587
+          username: ${{ secrets.EMAIL_USERNAME }}
+          password: ${{ secrets.EMAIL_PASSWORD }}
+          subject: 'Deployment to AWS testing server failed'
+          body: 'The deployment to the AWS testing server has failed. Please check the logs for more information.'
+
+      - name: Send email notification on success
+        if: success()
+        uses: dawidd6/action-send-mail@v3
+        with:
+          server_address: smtp.gmail.com
+          server_port: 587
+          username: ${{ secrets.EMAIL_USERNAME }}
+          password: ${{ secrets.EMAIL_PASSWORD }}
+          subject: 'Deployment to AWS testing server succeeded'
+          body: 'The deployment to the AWS testing server(IP: 3.81.45.210 ) has succeeded. You can access the deployed project at http://${{ secrets.HOST_NAME_TESTING }}.'
