--- a/.github/workflows/connect_ec2_staging.yml
+++ b/.github/workflows/connect_ec2_staging.yml
@@ -26,3 +26,29 @@ jobs:
           bash trigger_service_up.sh
           echo "DONE"
           echo "THE SERVER IS UP AT http://${HOSTNAME}"'
+  notify:
+    runs-on: ubuntu-latest
+    needs: deploy
+
+    steps:
+      - name: Send email notification on failure
+        if: failure()
+        uses: dawidd6/action-send-mail@v3
+        with:
+          server_address: smtp.gmail.com
+          server_port: 587
+          username: ${{ secrets.EMAIL_USERNAME }}
+          password: ${{ secrets.EMAIL_PASSWORD }}
+          subject: 'Deployment to AWS staging server failed'
+          body: 'The deployment to the AWS staging server has failed. Please check the logs for more information.'
+
+      - name: Send email notification on success
+        if: success()
+        uses: dawidd6/action-send-mail@v3
+        with:
+          server_address: smtp.gmail.com
+          server_port: 587
+          username: ${{ secrets.EMAIL_USERNAME }}
+          password: ${{ secrets.EMAIL_PASSWORD }}
+          subject: 'Deployment to AWS staging server succeeded'
+          body: 'The deployment to the AWS staging server(52.90.227.195) has succeeded. You can access the deployed project at http://${{ secrets.HOST_NAME_STAGGING }}.'
